--- a/CATS/test-output/emailable-report.html
+++ b/CATS/test-output/emailable-report.html
@@ -9,10 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">32,973</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">61,955</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">tests.AgentSettingsTest</td><td><a href="#m0">CheckAgentSetting</a></td><td rowspan="1">1614778197438</td><td rowspan="1">20782</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">tests.AgentSettingsTest</td><td><a href="#m0">CheckAgentSetting</a></td><td rowspan="1">1641300029297</td><td rowspan="1">54073</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">tests.AgentSettingsTest#CheckAgentSetting</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>PARTEEINS.AS</td><td>best2018</td><td>53357214</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">tests.AgentSettingsTest#CheckAgentSetting</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th><th>Parameter #5</th><th>Parameter #6</th><th>Parameter #7</th><th>Parameter #8</th><th>Parameter #9</th><th>Parameter #10</th><th>Parameter #11</th><th>Parameter #12</th><th>Parameter #13</th></tr><tr class="param stripe"><td>PARTEEINS.AS</td><td>best2018</td><td>53357214</td><td>Yes</td><td>No</td><td>Yes</td><td>Enable ACH</td><td>011000015</td><td>12345</td><td>12345</td><td>Savings</td><td>Yes</td><td>13</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
